--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
-  <script type="module" src="/server/index.js"></script>
+  <script type="module" src="server/index.js"></script>
   <title>Short Summary</title>
 </head>
 
 <body>
   <div id="app">
-    <img src="/logo.svg" alt="logo">
+    <img src="public/logo.svg" alt="logo">
     <h1>Short Summary</h1>
     <form id="form" action="">
       <input type="url" id="url" placeholder="URL do video">
